# AIOrganization

./: .editorconfig  .gitignore  ACCEPTANCE_REPORT.md  AGENTS.md  CI_BLOCKED_REPORT.md  CI_PENDING_REPORT.md  CODEX_CLI_DIAGNOSTIC_REPORT.md  CODEX_MULTI_FILE_TASK_MERGE_APPROVAL_REPORT.md  CODEX_REAL_CODE_TASK_REPORT.md  CODEX_REAL_SMOKE_TEST_REPORT.md  CODEX_WORKER_ACCEPTANCE_REPORT.md  DOCKER_SANDBOX_ACCEPTANCE_REPORT.md  FINAL_CI_VERIFICATION_REPORT.md  FINAL_VERIFICATION_REPORT.md  MERGE_APPROVAL_IMPLEMENTATION_REPORT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-lock.txt
.github/workflows/: verification.yml
alembic/: env.py
alembic/versions/: 0001_initial_business_schema.py  0002_add_task_metadata.py
docs/: API.md  ARCHITECTURE_OVERVIEW.md  CHECKPOINT_SECURITY.md  CI_VERIFICATION.md  CODEX_CLI_DIAGNOSTICS.md  CODEX_REAL_CODE_TASK.md  CODEX_REAL_SMOKE_TEST.md  CODEX_WORKER.md  CODING_WORKER_SECURITY.md  DATABASE_DESIGN.md  DEPENDENCY_EVALUATION.md  DEPENDENCY_UPDATE_POLICY.md  DOCKER_SANDBOX.md  LICENSE_INVENTORY.md  LOCAL_DEVELOPMENT.md  MERGE_APPROVAL.md  ROADMAP.md  STATE_MACHINE.md  TASK_PROTOCOL.md  TESTING.md  THIRD_PARTY_ARCHITECTURE.md  THREAT_MODEL.md  WORKTREE_ISOLATION.md
docs/DECISIONS/: ADR-001-agent-orchestration-framework.md  ADR-002-coding-worker-integration.md
scripts/: supply_chain_checks.ps1
src/ai_org/: __init__.py  security.py
tests/: conftest.py
tests/e2e/: test_api.py  test_merge_candidates_api.py
tests/integration/: test_alembic_and_postgres.py  test_codex_worker_workflow.py  (+2 more)
(+63 files in other folders)
